 VERSION 1.92.5 WIP (In Progress)
-----------------------------------------------------------------------

Breaking Changes:

 - Keys: commented out legacy names which were obsoleted in 1.89.0 (August 2022).
   - ImGuiKey_ModCtrl  --> ImGuiMod_Ctrl
   - ImGuiKey_ModShift --> ImGuiMod_Shift
   - ImGuiKey_ModAlt   --> ImGuiMod_Alt
   - ImGuiKey_ModSuper --> ImGuiMod_Super
 - BeginChild: commented out legacy names which were obsoleted in 1.90.0 (Nov 2023),
   1.90.9 (July 2024), 1.91.1 (August 2024). (#462, #7687)
   - ImGuiChildFlags_Border                  --> ImGuiChildFlags_Borders
   - ImGuiWindowFlags_NavFlattened           --> ImGuiChildFlags_NavFlattened (moved to ImGuiChildFlags).
   - ImGuiWindowFlags_AlwaysUseWindowPadding --> ImGuiChildFlags_AlwaysUseWindowPadding (moved to ImGuiChildFlags).
   So:
   - BeginChild(name, size, 0, ImGuiWindowFlags_NavFlattened)           --> BeginChild(name, size, ImGuiChildFlags_NavFlattened, 0)
   - BeginChild(name, size, 0, ImGuiWindowFlags_AlwaysUseWindowPadding) --> BeginChild(name, size, ImGuiChildFlags_AlwaysUseWindowPadding, 0)

Other Changes:

- Tables: fixed a bug where nesting BeginTable()->Begin()->BeginTable() would
  result in temporarily incorrect state, which would lead to bugs to side effects
  in various locations, e.g. GetContentRegionAvail() calls or using clipper. (#9005)
  EndTable() was mistakenly restoring a wrong current table.
- Tables: Angled headers: fixed an auto-resize feedback loop that could
  affect tables with empty non-resizing columns using angled headers, making
  them typically flicker back and forth between +0 and +1 pixels.
- Windows: io.ConfigWindowsMoveFromTitleBarOnly is latched during Begin(),
  effectively allowing to change the value on a per-window basis (although
  there is a better internal mechanism for it).
- Disabled: fixed a bug when a previously enabled item that got nav focus
  and then turns disabled could still be activated using keyboard. (#9036)